Fix various z-index problems

--- a/app/components/modal-dialog.styl
+++ b/app/components/modal-dialog.styl
@@ -39,6 +39,7 @@ button.kwizzad-close-dialog
   border-radius: 100px
   border: rgba(255, 255, 255, 0.24) 1px solid
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
   svg
     position: absolute;
     top: 50%;
