--- a/app/kwizzad.styl
+++ b/app/kwizzad.styl
@@ -6,6 +6,7 @@
   position: fixed;
   display: none;
   transition: opacity 0.5s ease-out;
+  z-index: 10000;
 }
 
 .kwizzad-container {
